# quant-backtester

./: .gitignore  CMakeLists.txt  README.md  app.py
data/: sample_prices.csv
include/: backtester.h  csv_writer.h  data_loader.h  metrics.h  strategy.h  tuner.h
output/: equity_curve.csv  trades.csv  tuning_results.csv
plots/: plot_results.py
src/: backtester.cpp  csv_writer.cpp  data_loader.cpp  main.cpp  metrics.cpp  strategy.cpp  tuner.cpp
templates/: index.html
